--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@uiw/codemirror-theme-vscode": "^4.22.2",
     "@uiw/react-codemirror": "^4.22.2",
     "firebase": "^10.12.2",
+    "firebase-tools": "^13.11.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-loader-spinner": "^6.1.6",
