--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@uiw/react-codemirror": "^4.22.2",
     "firebase": "^10.12.2",
     "firebase-tools": "^13.11.2",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-loader-spinner": "^6.1.6",
