--- a/package.json
+++ b/package.json
@@ -30,8 +30,9 @@
     "react-dom": "^18.2.0",
     "react-loader-spinner": "^6.1.6",
     "react-redux": "^9.1.2",
+    "react-resizable-panels": "^2.0.19",
     "react-router-dom": "^6.23.1",
-    "react-split-pane": "^2.0.3",
+    "react-split-pane": "^0.1.92",
     "react-toastify": "^10.0.5",
     "split-pane-react": "^0.1.3",
     "uuid": "^10.0.0"
